# CoSER-DiC

./: .gitignore  README.md  pyproject.toml
configs/: project.yaml
requirements/: base.txt  torch-cu124.txt
scripts/: analyze_stage1_semantic_vq.py  analyze_stage3_failure_modes.py  analyze_stage3_residual_grid_distribution.py  analyze_stage4_cod_lite_condition_stats.py  audit_per_image_reproducibility.py  build_stage3_hybrid_residual_prior.py  build_stage3_training_cache_fast.py  check_env.py  check_gpu_ready.py  clone_baselines.py  collect_bd_curve_points.py  compare_stage3_gain_sweep.py  compare_stage3_per_image_metrics.py  compute_bd_rate.py  compute_image_distribution_metrics.py  dataset_protocol_report.py  dataset_report.py  download_cod_lite_assets.py  eval_cod_lite_condition_oracle.py  eval_cod_lite_official_baseline.py  eval_compressai_anchor.py  eval_stage1_semantic_bitstream.py  eval_stage2_learned_topk_escape_bitstream.py  eval_stage2_static_huffman_bitstream.py  eval_stage3_residual_autoencoder_bitstream.py  eval_stage3_uniform_residual_bitstream.py  eval_stage4_cod_lite_adapter.py  export_stage1_semantic_tokens.py  export_worst_case_gallery.py  fit_stage2_learned_topk_escape_prior.py  fit_stage2_static_huffman_prior.py  fit_stage3_residual_huffman_prior.py  fit_stage5_condition_control_basis.py  inspect_cod_lite_backbone_params.py  inspect_stage5_control_basis.py  plan_cod_lite_official_baselines.py  plan_stage5_control_curve.py  plan_stage5_lora_targets.py  promote_stage5_control_candidates.py  select_stage5_control_candidates.py  (+15 more)
tests/: test_padding.py  (+40 more)
(+1040 files in other folders)
