[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coserdic"
version = "0.1.0"
description = "Research workspace for Compression-Oriented Semantic-Residual Diffusion Codec"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{name = "CoSER-DiC Research"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

